manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: condus-amazing-race-route
  labels:
    app: condus-amazing-race-app
    type: external
spec:
  host: condus-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi 
  port:
    targetPort: 3000
  to:
    kind: Service
    name: condus-amazing-race-svc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
